<resources>
    <string name="app_name">Guide App</string>
    <string name="txt_Name">Enter your Name</string>
    <string name="txt_contact">Enter Phone Number</string>
    <string name="txt_email">Enter your email</string>
    <string name="txt_pass">Create Password</string>
    <string name="click_login">Already have account?<u>Click Here</u></string>
    <string name="title_activity_welcome_bottom">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="choose_camera">Choose to Open Camera</string>
    <string name="choose_gallery">Choose to select from Gallery</string>
</resources>